--- a/app/src/main/res/layout/activity_list_view_animation.xml
+++ b/app/src/main/res/layout/activity_list_view_animation.xml
@@ -12,15 +12,13 @@
         <CheckBox
             android:id="@+id/vpaCB"
             android:text="viewpropertyanimator"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <CheckBox
             android:id="@+id/setTransientStateCB"
             android:text="transient_state"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <ListView
